Erster Durchstich: Bookings sind jetzt nicht mehr in den Rooms, sondern standalone.